rgbds-0.6.1/test/asm/period.simple.err
error: period.asm(5):
    syntax error
error: Assembly aborted (1 error)!
