rgbds-0.6.1/test/asm/period.asm
section "period", rom0

global1: db 1
.local   db 2
.        db 3
